--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development webpack serve --open & node server/server.js",
+    "dev:webpack": "NODE_ENV=development webpack serve --open",
+    "dev:server": "NODE_ENV=development nodemon server/server.js",
+    "dev": "npm run dev:webpack & npm run dev:server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +19,7 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.1",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
@@ -27,9 +30,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.8"
