--- a/package.json
+++ b/package.json
@@ -29,15 +29,22 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-spotify": "^2.0.0",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
   }
 }
