--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.1",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
