--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "babel-loader": "^9.1.3",
     "concurrently": "^8.2.1",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
@@ -44,6 +46,7 @@
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-p5": "^1.3.35",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8"
