--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
     "dev:webpack": "NODE_ENV=development webpack serve --open",
-    "dev:server": "NODE_ENV=development nodemon server/server.js",
+    "dev:server": "NODE_ENV=development node server/server.js",
     "dev": "npm run dev:webpack & npm run dev:server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +19,13 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
+    "canvas": "^2.11.2",
     "concurrently": "^8.2.1",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "json-loader": "^0.5.7",
+    "p5": "^1.7.0",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
@@ -36,6 +39,7 @@
     "axios": "^1.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "d3": "^7.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -45,10 +49,12 @@
     "passport-spotify": "^2.0.0",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.35",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "save": "^2.9.0",
     "styled-components": "^6.0.8"
   }
 }
