--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "http": "^0.0.1-security",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
@@ -55,6 +56,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "save": "^2.9.0",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "ws": "^8.14.2"
   }
 }
